packages/lustre-v6.6.103.3/test/should_fail/clock/bad_call02.lus

-- clock checking of predefined ops

node bad_call02(a:int; c:bool) returns (x : int);
let
	x = a when c;
tel 
